[package]
name = "popolion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "popo"
path = "src/main.rs"

[dependencies]
libtos = { git = "https://github.com/honnip/libtos" }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
