[package]
name = "popolion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "popo"
path = "src/main.rs"

[profile.release]
strip = true
codegen-units = 1

[dependencies]
libtos = { git = "https://github.com/honnip/libtos", rev = "8a206762" }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
sanitize-filename = "0.4"
anyhow = "1"
indicatif = { version = "0.17", features = ["improved_unicode"] }
